// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CInputFile renders correctly 1`] = `
<div
  class="form-row was-validated"
  role="group"
>
  <label
    class="additional-label-class col-form-label col-sm-3"
    for="some_id"
  >
    
        label
      
  </label>
   
  <div
    class="additional-wrapper-class col-sm-9"
  >
    <!---->
     
    <input
      class="custom-file-input is-valid additional-input-class"
      id="some_id"
      multiple="multiple"
      type="file"
    />
     
    <label
      class="custom-file-label"
      for="some_id"
    >
      
      Choose files...
    
    </label>
      
    <!---->
     
    <div
      class="valid-tooltip"
    >
      input is valid
    </div>
     
    <div
      class="invalid-tooltip"
    >
      input is invalid
    </div>
     
    <small
      class="form-text text-muted w-100"
    >
      permission
    </small>
  </div>
</div>
`;

exports[`CInputFile renders correctly basic functionality 1`] = `
<div
  class="form-group position-relative"
  role="group"
>
  <label
    class=""
    for="some_id"
  >
    
        label
      
  </label>
   
  <!---->
   
  <input
    class="form-control-file"
    id="some_id"
    type="file"
  />
   
  <!---->
    
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
</div>
`;
